--- a/supra.html
+++ b/supra.html
@@ -28,140 +28,141 @@
       position: absolute;
       top: 100%;
       left: 0;
-      z-index: 1000; /* Asegura que aparezca encima de otros elementos */
-      background-color: rgba(255, 255, 255, 0.8); /* Fondo semitransparente */
-      border: 1px solid #ced4da; /* Borde gris */
-      max-height: 200px; /* Altura máxima para la lista de sugerencias */
-      overflow-y: auto; /* Permitir desplazamiento vertical si es necesario */
+      z-index: 1000;
+      background-color: rgba(255, 255, 255, 0.8);
+      border: 1px solid #ced4da;
+      max-height: 200px;
+      overflow-y: auto;
       width: 100%;
-      display: none; /* Ocultar inicialmente */
-  }
-  
-  #cover-search {
+      display: none;
+    }
+
+    #cover-search {
       position: fixed;
       top: 0;
       left: 0;
       right: 0;
       bottom: 0;
-      z-index: 999; /* Asegura que esté detrás del cuadro de búsqueda */
-      display: none; /* Ocultar inicialmente */
-  }
-
+      z-index: 999;
+      display: none;
+    }
   </style>
 </head>
 
 <body>
   <nav class="navbar navbar-expand-lg navbar-light bg-light">
     <div class="container">
-    <a class="navbar-brand" href="#">
+      <a class="navbar-brand" href="#">
         <img src="img/logo.png" class="logo-redondeado" alt="" width="40" height="40">
-    </a>
-    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
+      </a>
+      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
         aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
-    </button>
-    <div class="collapse navbar-collapse" id="navbarSupportedContent">
+      </button>
+      <div class="collapse navbar-collapse" id="navbarSupportedContent">
         <ul class="navbar-nav me-auto mb-2 mb-lg-0">
           <li class="nav-item">
             <a class="nav-link" href="index.html">
-              <div class="d-flex align-items-center"> <!-- Nuevo: Contenedor para el ícono y el texto -->
-                  <i class="fa-solid fa-house"></i>
-                  <span class="ms-2">Inicio</span> <!-- Cambio: Añadir un margen a la izquierda -->
+              <div class="d-flex align-items-center">
+                <i class="fa-solid fa-house"></i>
+                <span class="ms-2">Inicio</span>
               </div>
             </a>
           </li>
           <li class="nav-item dropdown">
             <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownServicios" role="button"
-            data-bs-toggle="dropdown" aria-expanded="false">
-            <i class="fa-solid fa-rectangle-list"></i>
-            Servicios
+              data-bs-toggle="dropdown" aria-expanded="false">
+              <i class="fa-solid fa-rectangle-list"></i>
+              Servicios
             </a>
             <ul class="dropdown-menu" aria-labelledby="navbarDropdownServicios">
-            <li class="dropdown-submenu">
-                <a class="dropdown-item dropdown-toggle" href="#" id="navbarDropdownCategoria" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-                <i class="fa-solid fa-layer-group"></i>
-                Categoría
+              <li class="dropdown-submenu">
+                <a class="dropdown-item dropdown-toggle" href="#" id="navbarDropdownCategoria" role="button"
+                  data-bs-toggle="dropdown" aria-expanded="false">
+                  <i class="fa-solid fa-layer-group"></i>
+                  Categoría
                 </a>
                 <ul class="dropdown-menu" aria-labelledby="navbarDropdownCategoria">
-                <li>
-                  <a class="dropdown-item" href="mantencionMotor.html">
-                    <div class="d-flex align-items-center">
-                      <i class="fa-solid fa-gauge-simple-high"></i>
-                      <span class="ms-2">Motor</span>
-                    </div>
-                  </a>
-                </li>
-                <li>
-                  <a class="dropdown-item" href="mantencionFrenos.html">
-                    <div class="d-flex align-items-center">
-                      <i class="fa-solid fa-car-burst"></i>
-                      <span class="ms-2">Frenos</span> 
-                    </div>
-                  </a>
-                </li>
-                <li>
-                  <a class="dropdown-item" href="mantencionTransmision.html">
-                    <div>
-                      <i class="fa-solid fa-oil-can"></i>
-                      <span class="ms-2">Transmisión</span>
-                    </div>
-                  </a>
-                </li>
-              </ul>
-          </li>
-          <li class="dropdown-submenu">
-              <a class="dropdown-item dropdown-toggle" href="#" id="navbarDropdownCategoria" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-              <i class="fa-solid fa-screwdriver-wrench"></i>
-              Mecánicos
-              </a>
-              <ul class="dropdown-menu" aria-labelledby="navbarDropdownCategoria">
-                <li>
-                  <a class="dropdown-item" href="mecanico1.html">
-                    <div class="d-flex align-items-center"> 
+                  <li>
+                    <a class="dropdown-item" href="mantencionMotor.html">
+                      <div class="d-flex align-items-center">
+                        <i class="fa-solid fa-gauge-simple-high"></i>
+                        <span class="ms-2">Motor</span>
+                      </div>
+                    </a>
+                  </li>
+                  <li>
+                    <a class="dropdown-item" href="mantencionFrenos.html">
+                      <div class="d-flex align-items-center">
+                        <i class="fa-solid fa-car-burst"></i>
+                        <span class="ms-2">Frenos</span>
+                      </div>
+                    </a>
+                  </li>
+                  <li>
+                    <a class="dropdown-item" href="mantencionTransmision.html">
+                      <div>
+                        <i class="fa-solid fa-oil-can"></i>
+                        <span class="ms-2">Transmisión</span>
+                      </div>
+                    </a>
+                  </li>
+                </ul>
+              </li>
+              <li class="dropdown-submenu">
+                <a class="dropdown-item dropdown-toggle" href="#" id="navbarDropdownCategoria" role="button"
+                  data-bs-toggle="dropdown" aria-expanded="false">
+                  <i class="fa-solid fa-screwdriver-wrench"></i>
+                  Mecánicos
+                </a>
+                <ul class="dropdown-menu" aria-labelledby="navbarDropdownCategoria">
+                  <li>
+                    <a class="dropdown-item" href="mecanico1.html">
+                      <div class="d-flex align-items-center">
                         <i class="fa-solid fa-user"></i>
-                        <span class="ms-2">Marcelo  Pino</span> 
-                    </div>
-                  </a>
-                </li>
-                <li>
-                  <a class="dropdown-item" href="mecanico2.html">
-                    <div class="d-flex align-items-center"> 
+                        <span class="ms-2">Marcelo Pino</span>
+                      </div>
+                    </a>
+                  </li>
+                  <li>
+                    <a class="dropdown-item" href="mecanico2.html">
+                      <div class="d-flex align-items-center">
                         <i class="fa-solid fa-user"></i>
-                        <span class="ms-2">Daniel Álvarez</span> 
-                    </div>
-                  </a>
-                </li>
-                <li>
-                  <a class="dropdown-item" href="mecanico3.html">
-                    <div class="d-flex align-items-center"> 
+                        <span class="ms-2">Daniel Álvarez</span>
+                      </div>
+                    </a>
+                  </li>
+                  <li>
+                    <a class="dropdown-item" href="mecanico3.html">
+                      <div class="d-flex align-items-center">
                         <i class="fa-solid fa-user"></i>
-                        <span class="ms-2">Carlos Echeverría</span> 
-                    </div>
-                  </a>
-                </li>
-              </ul>
-          </li>
-        </ul>
+                        <span class="ms-2">Carlos Echeverría</span>
+                      </div>
+                    </a>
+                  </li>
+                </ul>
+              </li>
+            </ul>
           <li class="nav-item">
             <a class="nav-link" href="contacto.html">
-              <div class="d-flex align-items-center"> 
-                  <i class="fa-solid fa-message"></i>
-                  <span class="ms-2">Contacto</span> 
+              <div class="d-flex align-items-center">
+                <i class="fa-solid fa-message"></i>
+                <span class="ms-2">Contacto</span>
               </div>
             </a>
           </li>
-        <li class="nav-item dropdown">
+          <li class="nav-item dropdown">
             <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownCuenta" role="button"
-            data-bs-toggle="dropdown" aria-expanded="false">
-            <i class="fa-solid fa-user"></i>
-            Cuenta
+              data-bs-toggle="dropdown" aria-expanded="false">
+              <i class="fa-solid fa-user"></i>
+              Cuenta
             </a>
             <ul class="dropdown-menu" aria-labelledby="navbarDropdownCuenta">
               <li>
                 <a class="dropdown-item" href="login.html">
                   <div class="d-flex align-items-center">
                     <i class="fa-solid fa-circle-user"></i>
-                    <span class="ms-2">Iniciar Sesión</span> 
+                    <span class="ms-2">Iniciar Sesión</span>
                   </div>
                 </a>
               </li>
@@ -169,63 +170,63 @@
                 <a class="dropdown-item" href="login.html">
                   <div class="d-flex align-items-center">
                     <i class="fa-solid fa-user-plus"></i>
-                    <span class="ms-2">Registrarse</span> 
+                    <span class="ms-2">Registrarse</span>
                   </div>
                 </a>
               </li>
             </ul>
         </ul>
         <form class="d-flex">
-        <input class="form-control me-2" type="search" placeholder="Buscar" aria-label="Buscar">
-        <button class="btn btn-outline-success" type="submit">Buscar</button>
+          <input class="form-control me-2" type="search" placeholder="Buscar" aria-label="Buscar">
+          <button class="btn btn-outline-success" type="submit">Buscar</button>
         </form>
-    </div>
+      </div>
     </div>
   </nav>
 
-<div id="cover-search"></div>
+  <div id="cover-search"></div>
   <video autoplay muted loop id="videoFondo">
     <source src="img/motor.mp4" type="video/mp4">
   </video>
 
   <div class="container mantencion-caja">
     <h1 style="color: white;">
-        Supra MK V: Mantención Motor
+      Supra MK V: Mantención Motor
     </h1>
     <ul class="list-group">
       <li class="list-group-item">
-          <h2>Información Personal</h2><br>
+        <h2>Información Personal</h2><br>
       </li>
       <li class="list-group-item">
         <div class="mt-3 text-center">
           <div class="image-container">
-              <label for="perfil">
-                  <img src="ruta_de_la_imagen" alt="Imagen de perfil" width="120" height="120">
-                  <input type="file" id="perfil" name="perfil" accept="image/*" style="display: none;">
-              </label>
+            <label for="perfil">
+              <img src="ruta_de_la_imagen" alt="Imagen de perfil" width="120" height="120">
+              <input type="file" id="perfil" name="perfil" accept="image/*" style="display: none;">
+            </label>
           </div>
-      </div>
-      
+        </div>
+
       </li>
       <li class="list-group-item">
-          <h5 class="mb-3">Nombre de Usuario:</h5>
-          <p class="mb-0"></p>
+        <h5 class="mb-3">Nombre de Usuario:</h5>
+        <p class="mb-0"></p>
       </li>
       <li class="list-group-item">
-          <h5 class="mb-3">Correo Electrónico:</h5>
-          <p class="mb-0"></p>
+        <h5 class="mb-3">Correo Electrónico:</h5>
+        <p class="mb-0"></p>
       </li>
       <li class="list-group-item">
-          <h5 class="mb-3">Edad:</h5> 
-          <p class="mb-0"></p>
+        <h5 class="mb-3">Edad:</h5>
+        <p class="mb-0"></p>
       </li>
       <li class="list-group-item">
-          <h5 class="mb-3">Bio</h5>
-          <input class="form-control me-2" type="text" maxlength="200">
-          <p class="mb-0"></p>
+        <h5 class="mb-3">Bio</h5>
+        <input class="form-control me-2" type="text" maxlength="200">
+        <p class="mb-0"></p>
       </li>
-  </ul>
-</div>
+    </ul>
+  </div>
   <footer class="footer mt-auto py-3">
     <div class="container text-center">
       <span class="text-muted">© 2024 Taller Mecánico "RAYO MAKWEEN" Todos los derechos reservados.</span>
@@ -237,85 +238,86 @@
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
     integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
     crossorigin="anonymous"></script>
-<script>
-  document.addEventListener("DOMContentLoaded", function() {
-    // Selección de los elementos de submenú de categoría
-    const dropdownSubmenus = document.querySelectorAll('.dropdown-submenu');
+  <script>
+    document.addEventListener("DOMContentLoaded", function () {
 
-    // Agregar un event listener a cada elemento de submenú de categoría
-    dropdownSubmenus.forEach(function(dropdownSubmenu) {
-      const dropdownToggle = dropdownSubmenu.querySelector('.dropdown-toggle');
+      const dropdownSubmenus = document.querySelectorAll('.dropdown-submenu');
 
-      dropdownToggle.addEventListener('click', function(event) {
-        // Evitar que el evento de clic propague
-        event.stopPropagation();
 
-        // Toggle de la clase 'show' en el submenú
-        dropdownSubmenu.classList.toggle('show');
+      dropdownSubmenus.forEach(function (dropdownSubmenu) {
+        const dropdownToggle = dropdownSubmenu.querySelector('.dropdown-toggle');
+
+        dropdownToggle.addEventListener('click', function (event) {
+
+          event.stopPropagation();
+
+
+          dropdownSubmenu.classList.toggle('show');
+        });
+      });
+
+
+      window.addEventListener('click', function (event) {
+        dropdownSubmenus.forEach(function (dropdownSubmenu) {
+          if (!dropdownSubmenu.contains(event.target)) {
+            dropdownSubmenu.classList.remove('show');
+          }
+        });
       });
     });
+  </script>
+  <script>
+    document.addEventListener("DOMContentLoaded", function () {
+      const searchInput = document.querySelector('.form-control');
+      const boxSearch = document.getElementById('box-search');
 
-    // Cerrar el submenú cuando se haga clic fuera de él
-    window.addEventListener('click', function(event) {
-      dropdownSubmenus.forEach(function(dropdownSubmenu) {
-        if (!dropdownSubmenu.contains(event.target)) {
-          dropdownSubmenu.classList.remove('show');
-        }
-      });
-    });
-  });
-</script>
-<script>
-document.addEventListener("DOMContentLoaded", function() {
-const searchInput = document.querySelector('.form-control');
-const boxSearch = document.getElementById('box-search');
+      if (searchInput && boxSearch) {
+        const items = boxSearch.querySelectorAll('li');
 
-if (searchInput && boxSearch) {
-    const items = boxSearch.querySelectorAll('li');
+        searchInput.addEventListener('input', function (event) {
+          const searchText = event.target.value.trim().toLowerCase();
 
-    searchInput.addEventListener('input', function(event) {
-        const searchText = event.target.value.trim().toLowerCase();
+          let hasResults = false;
 
-        let hasResults = false;
-
-        items.forEach(function(item) {
+          items.forEach(function (item) {
             const text = item.textContent.trim().toLowerCase();
 
             if (text.includes(searchText)) {
-                item.style.display = 'block';
-                hasResults = true;
+              item.style.display = 'block';
+              hasResults = true;
             } else {
-                item.style.display = 'none';
+              item.style.display = 'none';
             }
+          });
+
+          if (hasResults || searchText.length === 0) {
+            boxSearch.style.display = 'block';
+          } else {
+            boxSearch.style.display = 'none';
+          }
         });
 
-        if (hasResults || searchText.length === 0) {
+        searchInput.addEventListener('focus', function () {
+          if (searchInput.value.trim().length > 0) {
             boxSearch.style.display = 'block';
-        } else {
-            boxSearch.style.display = 'none';
-        }
-    });
+          }
+        });
 
-    searchInput.addEventListener('focus', function() {
-        if (searchInput.value.trim().length > 0) {
-            boxSearch.style.display = 'block';
-        }
-    });
+        searchInput.addEventListener('blur', function () {
 
-    searchInput.addEventListener('blur', function() {
-        // Espera 200 milisegundos para asegurarse de que el clic en la lista de sugerencias se maneje antes de ocultarla
-        setTimeout(function() {
+          setTimeout(function () {
             boxSearch.style.display = 'none';
-        }, 200);
-    });
+          }, 200);
+        });
 
-    document.addEventListener('click', function(event) {
-        if (!boxSearch.contains(event.target) && event.target !== searchInput) {
+        document.addEventListener('click', function (event) {
+          if (!boxSearch.contains(event.target) && event.target !== searchInput) {
             boxSearch.style.display = 'none';
-        }
+          }
+        });
+      }
     });
-}
-});
-</script>
+  </script>
 </body>
+
 </html>
